# j-switch

./: .gitignore  Cargo.toml  README.md  README_CN.md
src/: cli.rs  config.rs  error.rs  main.rs
src/commands/: current.rs  download.rs  list.rs  mod.rs  search.rs  switch.rs
src/downloader/: adoptium.rs  downloader.rs  extractor.rs  mod.rs  progress.rs  traits.rs
src/env/: mod.rs  unix.rs  windows.rs
src/jdk/: detector.rs  manager.rs  mod.rs
