[package]
name = "j-switch"
version = "0.1.0"
edition = "2024"
authors = ["GT <GT@example.com>"]
description = "A command-line tool to manage and switch between multiple JDK installations"
license = "MIT"

[[bin]]
name = "jsh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.4"
colored = "2.1"
thiserror = "1.0"
futures-util = "0.3"
zip = "6.0.0"
flate2 = "1.1.5"
tar = "0.4.44"
async-trait = "0.1.89"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
